--- a/settings.html
+++ b/settings.html
@@ -68,7 +68,23 @@
 								</ul>
 							</nav>
 							<div class="cabinet__content settings">
-								<div class="settings__form">
+								<ul class="settings__list">
+									<li class="settings__list-row">
+										<div class="settings__list-row-label">Телефон</div>
+										<div class="settings__list-row-value">+998913760850</div>
+									</li>
+									<li class="settings__list-row">
+										<div class="settings__list-row-label">
+											Паспортные данные
+										</div>
+										<div class="settings__list-row-value">KA1063989</div>
+									</li>
+									<li class="settings__list-row">
+										<div class="settings__list-row-label">Дата рождения</div>
+										<div class="settings__list-row-value">01.01.2000</div>
+									</li>
+								</ul>
+								<!-- <div class="settings__form">
 									<div class="settings__form-item">
 										<label
 											class="settings__form-item-label"
@@ -137,7 +153,7 @@
 											/>
 										</label>
 									</div>
-								</div>
+								</div> -->
 								<button class="settings__logout btn">Выйти</button>
 							</div>
 						</div>
